# SKOGA-UI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Format.ps1  README.md  RemoveSubmodule.ps1
Example/: CMakeLists.txt
Example/src/: main.cpp
Skoga/: CMakeLists.txt
Skoga/src/: Skoga.h
Skoga/src/Skoga/: Application.cpp  Application.h  Color.cpp  Color.h  Config.h  Core.h  DebugOverlay.cpp  DebugOverlay.h  DebugSidebar.cpp  DebugSidebar.h  Example.cpp  File.cpp  File.h  Fonts.cpp  Fonts.h  Stylesheet.h  Widget.cpp  Widget.h  WidgetBuilders.h
Skoga/src/Skoga/Widgets/: Background.cpp  Background.h  Button.cpp  Button.h  Container.cpp  Container.h  Layout.cpp  Layout.h  Padding.cpp  Padding.h  Text.cpp  Text.h
Workspace/: main.xml
